[gd_scene load_steps=12 format=2]

[ext_resource path="res://data/UI/Cutscene.tscn" type="PackedScene" id=1]
[ext_resource path="res://data/UI/Opening.gd" type="Script" id=2]
[ext_resource path="res://assets/Actor/ScientistIdle.png" type="Texture" id=3]
[ext_resource path="res://assets/Planets/Dreamworld.png" type="Texture" id=4]
[ext_resource path="res://assets/Actor/Alien_Front_View.png" type="Texture" id=5]
[ext_resource path="res://assets/Actor/Eye_Front_View.png" type="Texture" id=6]
[ext_resource path="res://assets/Actor/CANDY_KID_SPRITE_SHEET.png" type="Texture" id=7]
[ext_resource path="res://assets/Environments/CandyCornWorld/CandyWorldTileMap1.png" type="Texture" id=8]
[ext_resource path="res://assets/Actor/CandyKidSide.png" type="Texture" id=9]
[ext_resource path="res://assets/Actor/Alien_Side_View.png" type="Texture" id=10]
[ext_resource path="res://assets/Actor/Eye_Side_View.png" type="Texture" id=11]

[node name="Opening" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="." index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Story" parent="." index="2"]
margin_top = 32.0

[node name="Continue" parent="." index="3"]
margin_top = 440.0
margin_bottom = 512.0

[node name="Scenes" type="Node2D" parent="." index="4"]

[node name="Scene0" type="Node2D" parent="Scenes" index="0"]
modulate = Color( 1, 1, 1, 0 )

[node name="ScientistIdle" type="Sprite" parent="Scenes/Scene0" index="0"]
position = Vector2( 472, 344 )
texture = ExtResource( 3 )
hframes = 4

[node name="Scene1" type="Node2D" parent="Scenes" index="1"]
modulate = Color( 1, 1, 1, 0 )

[node name="Dreamworld" type="Sprite" parent="Scenes/Scene1" index="0"]
position = Vector2( 472, 320 )
texture = ExtResource( 4 )

[node name="Scene2" type="Node2D" parent="Scenes" index="2"]
modulate = Color( 1, 1, 1, 0 )

[node name="Alien_Front_View" type="Sprite" parent="Scenes/Scene2" index="0"]
position = Vector2( 472, 344 )
texture = ExtResource( 5 )
hframes = 7

[node name="Eye_Front_View" type="Sprite" parent="Scenes/Scene2" index="1"]
position = Vector2( 424, 344 )
texture = ExtResource( 6 )
hframes = 7

[node name="CANDY_KID_SPRITE_SHEET" type="Sprite" parent="Scenes/Scene2" index="2"]
position = Vector2( 520, 344 )
texture = ExtResource( 7 )
hframes = 3

[node name="Scene3" type="Node2D" parent="Scenes" index="3"]
modulate = Color( 1, 1, 1, 0 )

[node name="Alien_Front_View2" type="Sprite" parent="Scenes/Scene3" index="0"]
position = Vector2( 472, 344 )
texture = ExtResource( 5 )
hframes = 7

[node name="CandyWorldTileMap1" type="Sprite" parent="Scenes/Scene3" index="1"]
position = Vector2( 480, 352 )
texture = ExtResource( 8 )
vframes = 10
hframes = 10
frame = 64

[node name="Eye_Front_View2" type="Sprite" parent="Scenes/Scene3" index="2"]
position = Vector2( 424, 344 )
texture = ExtResource( 6 )
hframes = 7

[node name="CandyWorldTileMap2" type="Sprite" parent="Scenes/Scene3" index="3"]
position = Vector2( 416, 352 )
texture = ExtResource( 8 )
vframes = 10
hframes = 10
frame = 64

[node name="CANDY_KID_SPRITE_SHEET2" type="Sprite" parent="Scenes/Scene3" index="4"]
position = Vector2( 520, 344 )
texture = ExtResource( 7 )
hframes = 3

[node name="CandyWorldTileMap3" type="Sprite" parent="Scenes/Scene3" index="5"]
position = Vector2( 536, 352 )
texture = ExtResource( 8 )
vframes = 10
hframes = 10
frame = 64

[node name="Scene4" type="Node2D" parent="Scenes" index="4"]
modulate = Color( 1, 1, 1, 0 )

[node name="Dreamworld" type="Sprite" parent="Scenes/Scene4" index="0"]
position = Vector2( 472, 320 )
texture = ExtResource( 4 )

[node name="CandyKidSide" type="Sprite" parent="Scenes/Scene4" index="1"]
position = Vector2( 378.119, 273.059 )
rotation = -1.10193
texture = ExtResource( 9 )
hframes = 9

[node name="Eye_Side_View" type="Sprite" parent="Scenes/Scene4" index="2"]
position = Vector2( 469.008, 214.976 )
texture = ExtResource( 11 )
hframes = 7

[node name="Alien_Side_View" type="Sprite" parent="Scenes/Scene4" index="3"]
position = Vector2( 578.133, 326.75 )
rotation = 1.62363
texture = ExtResource( 10 )
hframes = 7
